--- a/master.css
+++ b/master.css
@@ -3,6 +3,21 @@
 
 .cabecera{
   background-color: lavender;
+  height: 200px;
+}
+.cabecera img{
+  display: inline-block;
+  width: 150px;
+  border-radius: 100%;
+  position: relative;
+  right: 580px;
+  top: 25px;
+}
+.cabecera h3{
+  display: inline-block;
+  position: relative;
+  left: 60px;
+  bottom: 30px;
 }
 .navPrincipal{
   background-color: olive;
@@ -12,9 +27,62 @@
 }
 .noticias{
   background-color: lavender;
+
 }
-.nota{
+.noticias h3{
+ position: relative;
+ left: 45%;
+ bottom: -30px;
+}
+.nota1{
   background-color: olive;
+  display: inline-block;
+  width: 48%;
+  margin: 10px;
+  position: relative;
+  top:20px;
+  left: 20px;
+
+
+
+}
+.nota1 h4{
+  position: relative;
+  left: 45%;
+  bottom: 5px;
+
+}
+.nota1 img{
+  position: relative;
+  left: 300px;
+  width: 30%;
+  height: 300px;
+
+}
+
+.nota2{
+  background-color: olive;
+  display: inline-block;
+  width: 48%;
+  margin: 10px;
+  position: relative;
+  top:20px;
+  left: 20px;
+
+
+}
+.nota2 h4{
+  position: relative;
+  left: 45%;
+  bottom: 5px;
+}
+.nota2 img{
+  position: relative;
+  left: 300px;
+  width: 30%;
+  height:300px;
+
+
 }
 .piePagina{
   background-color: pink;
@@ -22,7 +90,13 @@
 
 /* selector por id  */
 #tituloPrincipal{
-  text-align: center;
+  display: inline-block;
+  width: auto;
+ position: relative;
+ left: 300px;
+ bottom: 50px;
+
+
 }
 /* selector Combinador de descendientes */
 nav li{
@@ -64,4 +138,14 @@ ul>li{
 .boring-text::after {
   content: " <- BORING";
   color: red;
+}
+hr{
+  width: 10%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border-bottom: 7px dotted red;
+}
+.nota img{
+  width: auto;
+  height: 300px;
 }
