--- a/master.css
+++ b/master.css
@@ -1,6 +1,6 @@
 /* https://developer.mozilla.org/es/docs/Web/CSS/CSS_Selectors */
-/* selector por id */
 
+/* selector por clase */
 .cabecera{
   background-color: lavender;
   height: 200px;
@@ -10,97 +10,98 @@
   width: 150px;
   border-radius: 100%;
   position: relative;
-  left: 20px;
+  right: 440px;
   top: 25px;
 }
 .cabecera h3{
   display: inline-block;
   position: relative;
-  right: 100px;
-  bottom: 30px;
+  left:60px;
+  bottom: 35px;
 }
+/* selector por id */
+#tituloPrincipal{
+  display: inline-block;
+  width: auto;
+  position: relative;
+  left: 250px;
+  bottom: 65px;
+
+}
+
 .navPrincipal{
   background-color: olive;
+
 }
 .principal{
   background-color: pink;
 }
 .noticias{
   background-color: lavender;
-
 }
 .noticias h3{
- position: relative;
- left: 45%;
- bottom: -30px;
+  text-align: center;
+  position: relative;
+  top: 10px;
 }
 .nota1{
   background-color: olive;
-  display: inline-block;
   width: 48%;
+  display: inline-block;
   margin: 10px;
-  position: relative;
-  top:20px;
-  left: 20px;
-
-
-
-}
-.nota1 h4{
-  position: relative;
-  left: 45%;
-  bottom: 5px;
-
+  height: 600px;
 }
 .nota1 img{
+  display: inline-block;
   position: relative;
-  left: 300px;
-  width: 30%;
-  height: 300px;
-
+  left: 35%;
+  top: 10px;
+  width: auto;
+  height: 200px;
+}
+.nota1 h4{
+  text-align: center;
+}
+.nota1 p,a{
+  width: 90%;
+  position: relative;
+  left: 30px;
+  margin: 10px;
 }
 
 .nota2{
   background-color: olive;
-  display: inline-block;
   width: 48%;
+  display: inline-block;
   margin: 10px;
+  height: 600px;
   position: relative;
-  top:20px;
-  left: 20px;
-
-
-}
-.nota2 h4{
-  position: relative;
-  left: 45%;
-  bottom: 5px;
+  top: 32px;
 }
 .nota2 img{
+  display: inline-block;
   position: relative;
-  left: 300px;
-  width: 30%;
-  height:300px;
+  left: 25%;
+  width: 300px;
+  height: auto;
+}
+.nota2 h4{
+  text-align: center;
+}
 
-
+.nota2 p,a{
+  width: 90%;
+  position: relative;
+  left: 30px;
+  padding: 10px;
 }
 .piePagina{
   background-color: pink;
 }
 
-/* selector por id  */
-#tituloPrincipal{
-  display: inline-block;
-  width: auto;
- position: relative;
- left: 90px;
- bottom: 50px;
-
-
-}
 /* selector Combinador de descendientes */
 nav li{
-  display: inline-block;
+ display: inline-block;
 }
 /* multiples selectores */
 h2,h3,h4,h5{
@@ -111,37 +112,20 @@ h2,h3,h4,h5{
 ul>li{
   list-style: none;
 }
-/* selector usando clases y etiquetas */
-.galeria{
-  background-color: lavender;
-  height: 300px;
-}
+/* selector usando clases y etiquetas  */
 .galeria img{
-  background-color: pink;
-  margin: 7px;
   width: 200px;
-  height: 200px;
-  border: 1px solid black;
-  box-shadow: 10px 10px 10px 3px rgba(0,0,0,0,21)
-  border-radius: 10px;
-}
-#pfixed{
-  position: fixed;
-  right:100px;
-  top: 100px;
+  height: auto;
 }
 
- background-color: blue;
 .navPrincipal li{
+  background-color: grey;
 }
 
 /* pseudoclases */
 .navPrincipal li:hover{
   background-color: green;
 
-  transition-delay: 0.5s;
-  transition-timing-function: ease-in-out;
-  transition-property: background-color;
 }
 /* pseudo elementos */
 .exciting-text::after {
@@ -153,13 +137,10 @@ ul>li{
   content: " <- BORING";
   color: red;
 }
+
 hr{
   width: 10%;
   margin-top: 20px;
   margin-bottom: 20px;
   border-bottom: 7px dotted red;
-}
-.nota img{
-  width: auto;
-  height: 300px;
 }
